user and foodblogger memu created

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,40 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-
-
-        </activity>
-
+        <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity"></activity>
-        <activity
-            android:name=".user_navigation"
-            android:label="@string/title_activity_user_navigation"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".navigation_foodblogger"
-            android:label="@string/title_activity_navigation_foodblogger"
-            android:theme="@style/AppTheme" />
-        <activity android:name=".forgotpassword_activity" >
-
-
-
-        </activity>
-
-
-        <activity android:name=".Homescreen_activity">
-
+        <activity android:name=".forgotpassword_activity" />
+        <activity android:name=".Homescreen_activity" />
+        <activity android:name=".Securityquestion" />
+        <activity android:name=".user">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".Securityquestion">
-
-        </activity>
+        <activity android:name=".foodblogger"></activity>
     </application>
 
 </manifest>
